--- a/.gitignore
+++ b/.gitignore
@@ -126,3 +126,12 @@ ownCloudIMBS/
 ownCloudSymatrial/
 perl5/
 spark/
+.oh-my-zsh/.gitignore
+.oh-my-zsh/MIT-LICENSE.txt
+.oh-my-zsh/README.markdown
+.oh-my-zsh/lib/
+.oh-my-zsh/log/
+.oh-my-zsh/plugins/
+.oh-my-zsh/templates/
+.oh-my-zsh/themes/
+.oh-my-zsh/tools/
